// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`custom proxyPrefixLength > inference > proxyPrefixLength 1`] = `
{
  "choices": [
    {
      "finish_reason": "stop",
      "index": 0,
      "message": {
        "annotations": [],
        "content": "Paris.",
        "refusal": null,
        "role": "assistant",
      },
    },
  ],
  "created": 1758119097,
  "id": "chatcmpl-CGnNZyR6FU8Xsw5X4N2YdTtaYBuWV",
  "model": "gpt-5-2025-08-07",
  "object": "chat.completion",
  "service_tier": "default",
  "system_fingerprint": null,
  "usage": {
    "completion_tokens": 11,
    "completion_tokens_details": {
      "accepted_prediction_tokens": 0,
      "audio_tokens": 0,
      "reasoning_tokens": 0,
      "rejected_prediction_tokens": 0,
    },
    "prompt_tokens": 23,
    "prompt_tokens_details": {
      "audio_tokens": 0,
      "cached_tokens": 0,
    },
    "pydantic_ai_gateway": {
      "cost_estimate": 0.00013875,
    },
    "total_tokens": 34,
  },
}
`;

exports[`key status > should change key status if limit is exceeded > key-spends 1`] = `
[
  {
    "entityId": 6,
    "limit": 0.01,
    "scope": "daily",
    "scopeInterval": {
      "date": "YYYY-MM-DDT00:00:00.000Z",
      "raw": 123456,
    },
    "spend": 0.018000000000000002,
  },
  {
    "entityId": 6,
    "limit": null,
    "scope": "weekly",
    "scopeInterval": {
      "date": "YYYY-MM-DDT00:00:00.000Z",
      "raw": 123456,
    },
    "spend": 0.018000000000000002,
  },
  {
    "entityId": 6,
    "limit": null,
    "scope": "monthly",
    "scopeInterval": {
      "date": "YYYY-MM-DDT00:00:00.000Z",
      "raw": 123456,
    },
    "spend": 0.018000000000000002,
  },
  {
    "entityId": 6,
    "limit": null,
    "scope": "total",
    "scopeInterval": null,
    "spend": 0.018000000000000002,
  },
]
`;

exports[`key status > should change key status if limit is exceeded > kv-value 1`] = `
{
  "id": 6,
  "key": "tiny-limit",
  "keySpendingLimitDaily": 0.01,
  "org": 1,
  "project": 2,
  "projectSpendingLimitMonthly": 4,
  "providers": [
    {
      "baseUrl": "http://test.example.com/test",
      "credentials": "test",
      "injectCost": true,
      "providerId": "test",
    },
  ],
  "status": "limit-exceeded",
}
`;

exports[`key status > should change key status if limit is exceeded > project-spends 1`] = `
[
  {
    "entityId": 2,
    "limit": null,
    "scope": "daily",
    "scopeInterval": {
      "date": "YYYY-MM-DDT00:00:00.000Z",
      "raw": 123456,
    },
    "spend": 0.018000000000000002,
  },
  {
    "entityId": 2,
    "limit": null,
    "scope": "weekly",
    "scopeInterval": {
      "date": "YYYY-MM-DDT00:00:00.000Z",
      "raw": 123456,
    },
    "spend": 0.018000000000000002,
  },
  {
    "entityId": 2,
    "limit": 4,
    "scope": "monthly",
    "scopeInterval": {
      "date": "YYYY-MM-DDT00:00:00.000Z",
      "raw": 123456,
    },
    "spend": 0.018000000000000002,
  },
]
`;

exports[`key status > should change key status if limit is exceeded > user-spends 1`] = `[]`;

exports[`key status > should not change key status if limit is not exceeded > spend-table 1`] = `
[
  {
    "entityId": 4,
    "entityType": 3,
    "scope": 2,
    "spend": 0.018,
    "spendingLimit": null,
  },
  {
    "entityId": 4,
    "entityType": 3,
    "scope": 3,
    "spend": 0.018,
    "spendingLimit": null,
  },
  {
    "entityId": 2,
    "entityType": 1,
    "scope": 1,
    "spend": 0.018,
    "spendingLimit": null,
  },
  {
    "entityId": 2,
    "entityType": 1,
    "scope": 2,
    "spend": 0.018,
    "spendingLimit": null,
  },
  {
    "entityId": 3,
    "entityType": 2,
    "scope": 1,
    "spend": 0.018,
    "spendingLimit": null,
  },
  {
    "entityId": 3,
    "entityType": 2,
    "scope": 3,
    "spend": 0.018,
    "spendingLimit": null,
  },
  {
    "entityId": 4,
    "entityType": 3,
    "scope": 1,
    "spend": 0.018,
    "spendingLimit": 1,
  },
  {
    "entityId": 4,
    "entityType": 3,
    "scope": 4,
    "spend": 0.018,
    "spendingLimit": 2,
  },
  {
    "entityId": 3,
    "entityType": 2,
    "scope": 2,
    "spend": 0.018,
    "spendingLimit": 3,
  },
  {
    "entityId": 2,
    "entityType": 1,
    "scope": 3,
    "spend": 0.018,
    "spendingLimit": 4,
  },
]
`;
